# openxai-indexer

./: .gitignore  README.md  flake.nix
example/: flake.nix
nix/: nixos-module.nix  package.nix
nodejs-app/: index.ts  package-lock.json  package.json
nodejs-app/api/: return-types.ts  simple-router.ts
nodejs-app/contracts/: OpenxAIClaimer.ts
nodejs-app/event-watchers/claimer/: TokensClaimed.ts
nodejs-app/event-watchers/genesis/: Participated.ts
nodejs-app/event-watchers/token/: Approval.ts  Transfer.ts
nodejs-app/types/: event.ts  rewards.ts  sign.ts  storage.ts
nodejs-app/types/claimer/: events.ts
nodejs-app/types/genesis/: events.ts
nodejs-app/utils/: contract-watcher.ts  env.ts  json.ts  persistent-json.ts  projects.json  rewards-signer.ts
rust-app/: .env.example  Cargo.toml
rust-app/src/: main.rs
rust-app/src/api/: agreement.rs  claim.rs  credits.rs  deployment_signature.rs  handlers.rs  manual_tokens.rs  mod.rs  models.rs  nft_staking.rs  ownai_v1.rs  participated.rs  promo_code.rs  staking.rs  tokens_claimed.rs
rust-app/src/blockchain/: claimer.rs  credits.rs  genesis.rs  handlers.rs  mod.rs  models.rs  ownai_v1.rs
rust-app/src/database/: agreement.rs  claim.rs  credits.rs  deployment_signature.rs  handlers.rs  manual_tokens.rs  mod.rs  models.rs  nft_staking.rs  participated.rs  promo_code.rs  staking.rs  tokenized_server.rs  tokens_claimed.rs
rust-app/src/utils/: controller.rs  decimals.rs  env.rs  manual_tokens.rs  mod.rs  secure_memory.rs  signature_validator.rs  staking.rs  time.rs  wallet.rs  xnode.rs
