[package]
name = "openxai-indexer"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1", features = ["provider-ws"] }
futures-util = "0.3"
log = "0.4.27"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
env_logger = "0.11"
actix-cors = "0.7"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
