[package]
name = "openxai-indexer"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1.0.24", features = ["provider-ws"] }
futures-util = "0.3.31"
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
env_logger = "0.11.8"
actix-cors = "0.7.1"
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
xnode-deployer = { version = "1.0.6", features = ["hyperstack"] }
xnode-controller = "1.0.2"
xnode-manager-sdk = "1.0.2"
reqwest = { version = "0.12.23", features = ["json"] }
chrono = "0.4.41"
secrecy = "0.10.3"
hex = "0.4"
